fix mistakes (padding and margin) в UL

--- a/portfolio.html
+++ b/portfolio.html
@@ -14,33 +14,36 @@
 <body>
   <!-- Header -->
   <header class="header">
-    <nav class="site-nav container">
-      <a class="logo" href="./index.html" aria-label="логотип вэб студии">Web<span class="header-logo">Studio</span></a>
-      <ul class="nav-list list">
-        <li class="item">
-          <a class="link" href="./index.html">Студия</a>
-        </li>
-        <li class="item">
-          <a class="link current" href="./portfolio.html">Портфолио</a>
-        </li>
-        <li class="item">
-          <a class="link" href="">Контакты</a>
-        </li>
-      </ul>
-    </nav>
-    <address class="address-link address">
-      <ul class="header-link list">
-        <li class="item">
-          <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
-        </li>
-        <li class="item">
-          <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-        </li>
-      </ul>
-    </address>
+    <div class="container">
+      <nav class="site-nav">
+        <a class="logo" href="./index.html" aria-label="логотип вэб студии">Web<span
+            class="header-logo">Studio</span></a>
+        <ul class="nav-list list">
+          <li class="item">
+            <a class="link" href="./index.html">Студия</a>
+          </li>
+          <li class="item">
+            <a class="link current" href="./portfolio.html">Портфолио</a>
+          </li>
+          <li class="item">
+            <a class="link" href="">Контакты</a>
+          </li>
+        </ul>
+      </nav>
+      <address class="address-link address">
+        <ul class="address-list list">
+          <li class="item">
+            <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+          </li>
+          <li class="item">
+            <a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </div>
   </header>
+  <!-- End header -->
   <main>
-    <!-- End header -->
     <!-- Portfolio -->
     <section class="portfolio">
       <h1 class="visually-hidden">Портфолио</h1>
@@ -119,7 +122,6 @@
       </ul>
     </section>
   </main>
-  <!-- End portfolio -->
   <!-- Footer -->
   <footer class="footer">
     <a class="logo" href="./index.html" aria-label="логотип вэб студии">Web<span class="logo-footer">Studio</span></a>
@@ -138,7 +140,6 @@
       </ul>
     </address>
   </footer>
-  <!-- End footer -->
 </body>
 
 </html>
