--- a/index.html
+++ b/index.html
@@ -123,22 +123,26 @@
   </main>
   <!-- Footer -->
   <footer class="footer">
-    <a class="logo" href="./index.html" aria-label="логотип вэб студии">Web<span class="logo-footer">Studio</span></a>
-    <address class="address">
-      <ul class="list">
-        <li>
-          <a class="link map" href="https://goo.gl/maps/pGN7DzXUrCDLFUqRA" target="_blank">г. Киев, пр-т Леси Украинки,
-            26</a>
-        </li>
-        <li>
-          <a class="link" href="mailto:info@example.com">info@example.com</a>
-        </li>
-        <li>
-          <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
-        </li>
-      </ul>
-    </address>
+    <div class="container">
+      <a class="logo" href="./index.html" aria-label="логотип вэб студии">Web<span class="logo-footer">Studio</span></a>
+      <address class="address">
+        <ul class="list">
+          <li class="item">
+            <a class="link map" href="https://goo.gl/maps/pGN7DzXUrCDLFUqRA" target="_blank">г. Киев, пр-т Леси
+              Украинки,
+              26</a>
+          </li>
+          <li class="item">
+            <a class="link" href="mailto:info@example.com">info@example.com</a>
+          </li>
+          <li class="item">
+            <a class="link" href="tel:+380991111111">+38 099 111 11 11</a>
+          </li>
+        </ul>
+      </address>
+    </div>
   </footer>
+  <!-- End footer -->
 </body>
 
 </html>
