--- a/portfolio.html
+++ b/portfolio.html
@@ -46,98 +46,109 @@
   <main>
     <!-- Portfolio -->
     <section class="portfolio">
-      <h1 class="visually-hidden">Портфолио</h1>
-      <ul class="portfolio-filtrs list">
-        <li><button class="button-portfolio" aria-label="Все" type="button">Все</button></li>
-        <li><button class="button-portfolio" aria-label="Веб-сайты" type="button">Веб-сайты</button></li>
-        <li><button class="button-portfolio" aria-label="Приложения" type="button">Приложения</button></li>
-        <li><button class="button-portfolio" aria-label="Дизайн" type="button">Дизайн</button></li>
-        <li><button class="button-portfolio" aria-label="Маркетинг" type="button">Маркетинг</button></li>
-      </ul>
-      <ul class="list">
-        <li>
-          <a class="link" href="" target="_blank" aria-label="Веб-сайт Технокряк">
-            <img src="./images/portfolio/tehnokryak.jpg" alt="Веб-сайт Технокряк" width="370" height="294" />
-            <div class="portfolio-card">
-              <h2 class="portfolio-title">Технокряк</h2>
-              <p class="portfolio-subtitle">Веб-сайт</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="link" href="" target="_blank" aria-label="Дизайн постера под матч баскетбольных команд">
-            <img src="./images/portfolio/poster.jpg" alt="постер матча баскетбольных команд" width="370" height="294" />
-            <div class="portfolio-card">
-              <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
-              <p class="portfolio-subtitle">Дизайн</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="link" href="" target="_blank" aria-label="разработка приложения для ресторана морской еды">
-            <img src="./images/portfolio/restaurant.jpg" alt="эмблема ресторана морской еды" width="370" height="294" />
-            <div class="portfolio-card">
-              <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
-              <p class="portfolio-subtitle">Приложение</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="link" href="" target="_blank" aria-label="разработка маркетинга для проекта прайм">
-            <img src="./images/portfolio/prime.jpg" alt="фото наушников" width="370" height="294" />
-            <div class="portfolio-card">
-              <h2 class="portfolio-title">Проект <span lang="en">Prime</span> </h2>
-              <p class="portfolio-subtitle">Маркетинг</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="link" href="" target="_blank" aria-label="разработка приложения для дизайна коробок">
-            <img src="./images/portfolio/boxes.jpg" alt="фото дизайнерский коробок" width="370" height="294" />
-            <div class="portfolio-card">
-              <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
-              <p class="portfolio-subtitle">Приложение</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="link" href="" target="_blank" aria-label="разработка коропоративного вэб сайта">
-            <img src="./images/portfolio/inspiration.jpg" alt="разработка вэб сайта" width="370" height="294" />
-            <div class="portfolio-card">
-              <h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
-              <p class="portfolio-subtitle">Веб-сайт</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="link" href="" target="_blank" aria-label="разработка дизайна книги">
-            <img src="./images/portfolio/limited-edition.jpg" alt="дизайн книги" width="370" height="294" />
-            <div class="portfolio-card">
-              <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
-              <p class="portfolio-subtitle">Дизайн</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="link" href="" target="_blank" aria-label="разработка маркетингового проэкта лаб">
-            <img src="./images/portfolio/lab.jpg" alt="дизайн маркетингового проекта" width="370" height="294" />
-            <div class="portfolio-card">
-              <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
-              <p class="portfolio-subtitle">Маркетинг</p>
-            </div>
-          </a>
-        </li>
-        <li>
-          <a class="link" href="" target="_blank" aria-label="разработка бизнесс приложения">
-            <img src="./images/portfolio/crowing-business.jpg" alt="разработка приложения для бизнесса" width="370"
-              height="294" />
-            <div class="portfolio-card">
-              <h2 class="portfolio-title" lang="en">Growing Business</h2>
-              <p class="portfolio-subtitle">Приложение</p>
-            </div>
-          </a>
-        </li>
-      </ul>
+      <div class="container">
+        <h1 class="visually-hidden">Портфолио</h1>
+        <ul class="portfolio-filtrs list">
+          <li class="item"><button class="button-portfolio" aria-label="Все" type="button">Все</button></li>
+          <li class="item"><button class="button-portfolio" aria-label="Веб-сайты" type="button">Веб-сайты</button></li>
+          <li class="item"><button class="button-portfolio" aria-label="Приложения" type="button">Приложения</button>
+          </li>
+          <li class="item"><button class="button-portfolio" aria-label="Дизайн" type="button">Дизайн</button></li>
+          <li class="item"><button class="button-portfolio" aria-label="Маркетинг" type="button">Маркетинг</button></li>
+        </ul>
+        <ul class="portfolio-list list">
+          <li class="item">
+            <a class="link" href="" target="_blank" aria-label="Веб-сайт Технокряк">
+              <img class="portfolio-img" src="./images/portfolio/tehnokryak.jpg" alt="Веб-сайт Технокряк" width="370"
+                height="294" />
+              <div class="portfolio-card">
+                <h2 class="portfolio-title">Технокряк</h2>
+                <p class="portfolio-subtitle">Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="" target="_blank" aria-label="Дизайн постера под матч баскетбольных команд">
+              <img class="portfolio-img" src="./images/portfolio/poster.jpg" alt="постер матча баскетбольных команд"
+                width="370" height="294" />
+              <div class="portfolio-card">
+                <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
+                <p class="portfolio-subtitle">Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="" target="_blank" aria-label="разработка приложения для ресторана морской еды">
+              <img class="portfolio-img" src="./images/portfolio/restaurant.jpg" alt="эмблема ресторана морской еды"
+                width="370" height="294" />
+              <div class="portfolio-card">
+                <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
+                <p class="portfolio-subtitle">Приложение</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="" target="_blank" aria-label="разработка маркетинга для проекта прайм">
+              <img class="portfolio-img" src="./images/portfolio/prime.jpg" alt="фото наушников" width="370"
+                height="294" />
+              <div class="portfolio-card">
+                <h2 class="portfolio-title">Проект <span lang="en">Prime</span> </h2>
+                <p class="portfolio-subtitle">Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="" target="_blank" aria-label="разработка приложения для дизайна коробок">
+              <img class="portfolio-img" src="./images/portfolio/boxes.jpg" alt="фото дизайнерский коробок" width="370"
+                height="294" />
+              <div class="portfolio-card">
+                <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
+                <p class="portfolio-subtitle">Приложение</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="" target="_blank" aria-label="разработка коропоративного вэб сайта">
+              <img class="portfolio-img" src="./images/portfolio/inspiration.jpg" alt="разработка вэб сайта" width="370"
+                height="294" />
+              <div class="portfolio-card">
+                <h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
+                <p class="portfolio-subtitle">Веб-сайт</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="" target="_blank" aria-label="разработка дизайна книги">
+              <img class="portfolio-img" src="./images/portfolio/limited-edition.jpg" alt="дизайн книги" width="370"
+                height="294" />
+              <div class="portfolio-card">
+                <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
+                <p class="portfolio-subtitle">Дизайн</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="" target="_blank" aria-label="разработка маркетингового проэкта лаб">
+              <img class="portfolio-img" src="./images/portfolio/lab.jpg" alt="дизайн маркетингового проекта"
+                width="370" height="294" />
+              <div class="portfolio-card">
+                <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
+                <p class="portfolio-subtitle">Маркетинг</p>
+              </div>
+            </a>
+          </li>
+          <li class="item">
+            <a class="link" href="" target="_blank" aria-label="разработка бизнесс приложения">
+              <img class="portfolio-img" src="./images/portfolio/crowing-business.jpg"
+                alt="разработка приложения для бизнесса" width="370" height="294" />
+              <div class="portfolio-card">
+                <h2 class="portfolio-title" lang="en">Growing Business</h2>
+                <p class="portfolio-subtitle">Приложение</p>
+              </div>
+            </a>
+          </li>
+        </ul>
+      </div>
     </section>
   </main>
   <!-- Footer -->
