end work, our tem, about

--- a/index.html
+++ b/index.html
@@ -46,80 +46,99 @@
   <main>
     <!-- Hero -->
     <section class="hero">
-      <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
-      <button class="button-hero" type="button">Заказать услугу</button>
+      <div class="container">
+        <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
+        <button class="button-hero" type="button">Заказать услугу</button>
+      </div>
     </section>
     <!-- About us -->
     <section class="about">
-      <h2 hidden>О нас</h2>
-      <!-- delete hiden atribute after lern CSS and hiden with CSS -->
-      <ul class="list">
-        <li>
-          <h3 class="about-subtitle">Внимание к деталям</h3>
-          <p class="about-idea">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
-        </li>
-        <li>
-          <h3 class="about-subtitle">Пунктуальность</h3>
-          <p class="about-idea">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
-        </li>
-        <li>
-          <h3 class="about-subtitle">Планирование</h3>
-          <p class="about-idea">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
-        </li>
-        <li>
-          <h3 class="about-subtitle">Современные технологии</h3>
-          <p class="about-idea">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="visually-hidden">О нас</h2>
+        <ul class="about-list list">
+          <li class="item">
+            <h3 class="about-subtitle">Внимание к деталям</h3>
+            <p class="about-idea">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
+          </li>
+          <li class="item">
+            <h3 class="about-subtitle">Пунктуальность</h3>
+            <p class="about-idea">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.
+            </p>
+          </li>
+          <li class="item">
+            <h3 class="about-subtitle">Планирование</h3>
+            <p class="about-idea">Равным образом консультация с широким активом в значительной степени обуславливает.
+            </p>
+          </li>
+          <li class="item">
+            <h3 class="about-subtitle">Современные технологии</h3>
+            <p class="about-idea">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
+          </li>
+        </ul>
+      </div>
     </section>
     <!-- what are we doing -->
     <section class="works">
-      <h2 class="title">Чем мы занимаемся</h2>
-      <ul class="list">
-        <li>
-          <a href=""><img src="./images/about_us/about_us1.jpg" aria-label="фото процесса реализации"
-              alt="фото процесса реализации" width="370" height="294"></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/about_us/about_us2.jpg" aria-label="фото процесса реализации"
-              alt="фото процесса реализации" width="370" height="294"></a>
-        </li>
-        <li>
-          <a href=""><img src="./images/about_us/about_us3.jpg" aria-label="фото процесса реализации"
-              alt="фото процесса реализации" width="370" height="294"></a>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="title">Чем мы занимаемся</h2>
+        <ul class="works-list list">
+          <li class="item">
+            <a href=""><img src="./images/about_us/about_us1.jpg" aria-label="фото процесса реализации"
+                alt="фото процесса реализации" width="370" height="294"></a>
+          </li>
+          <li class="item">
+            <a href=""><img src="./images/about_us/about_us2.jpg" aria-label="фото процесса реализации"
+                alt="фото процесса реализации" width="370" height="294"></a>
+          </li>
+          <li class="item">
+            <a href=""><img src="./images/about_us/about_us3.jpg" aria-label="фото процесса реализации"
+                alt="фото процесса реализации" width="370" height="294"></a>
+          </li>
+        </ul>
+      </div>
     </section>
+    <!-- End what are we doing -->
     <!-- Our team -->
     <section class="team">
-      <h2 class="title">Наша команда</h2>
-      <ul class="list">
-        <li>
-          <img src="./images/our_team/our_team_1.jpg" aria-label="фото Игорь Демьяненко" alt="фото Игорь Демьяненко"
-            width="270" height="260">
-          <h3 class="team-subtitle">Игорь Демьяненко</h3>
-          <p class="team-position" lang="en">Product Designer</p>
-        </li>
-        <li>
-          <img src="./images/our_team/our_team_2.jpg" aria-label="фото Ольга Репина" alt="фото Ольга Репина" width="270"
-            height="260">
-          <h3 class="team-subtitle">Ольга Репина</h3>
-          <p class="team-position" lang="en">Frontend Developer</p>
-        </li>
-        <li>
-          <img src="./images/our_team/our_team_3.jpg" aria-label="фото Николай Тарасов" alt="фото Николай Тарасов"
-            width="270" height="260">
-          <h3 class="team-subtitle">Николай Тарасов</h3>
-          <p class="team-position" lang="en">Marketing</p>
-        </li>
-        <li>
-          <img src="./images/our_team/our_team_4.jpg" aria-label="фото Михаил Ермаков" alt="фото Михаил Ермаков"
-            width="270" height="260">
-          <h3 class="team-subtitle">Михаил Ермаков</h3>
-          <p class="team-position" lang="en">UI Designer</p>
-        </li>
-      </ul>
+      <div class="container">
+        <h2 class="title">Наша команда</h2>
+        <ul class="team-list list">
+          <li class="item">
+            <img src="./images/our_team/our_team_1.jpg" aria-label="фото Игорь Демьяненко" alt="фото Игорь Демьяненко"
+              width="270" height="260">
+            <div class="team-card">
+              <h3 class="team-subtitle">Игорь Демьяненко</h3>
+              <p class="team-position" lang="en">Product Designer</p>
+            </div>
+          </li>
+          <li class="item">
+            <img src="./images/our_team/our_team_2.jpg" aria-label="фото Ольга Репина" alt="фото Ольга Репина"
+              width="270" height="260">
+            <div class="team-card">
+              <h3 class="team-subtitle">Ольга Репина</h3>
+              <p class="team-position" lang="en">Frontend Developer</p>
+            </div>
+          </li>
+          <li class="item">
+            <img src="./images/our_team/our_team_3.jpg" aria-label="фото Николай Тарасов" alt="фото Николай Тарасов"
+              width="270" height="260">
+            <div class="team-card">
+              <h3 class="team-subtitle">Николай Тарасов</h3>
+              <p class="team-position" lang="en">Marketing</p>
+            </div>
+          </li>
+          <li class="item">
+            <img src="./images/our_team/our_team_4.jpg" aria-label="фото Михаил Ермаков" alt="фото Михаил Ермаков"
+              width="270" height="260">
+            <div class="team-card">
+              <h3 class="team-subtitle">Михаил Ермаков</h3>
+              <p class="team-position" lang="en">UI Designer</p>
+            </div>
+          </li>
+        </ul>
+      </div>
     </section>
+    <!-- End our team -->
   </main>
   <!-- Footer -->
   <footer class="footer">
