--- a/portfolio.html
+++ b/portfolio.html
@@ -59,8 +59,7 @@
         <ul class="portfolio-list list">
           <li class="item">
             <a class="link" href="" target="_blank" aria-label="Веб-сайт Технокряк">
-              <img class="portfolio-img" src="./images/portfolio/tehnokryak.jpg" alt="Веб-сайт Технокряк" width="370"
-                height="294" />
+              <img src="./images/portfolio/tehnokryak.jpg" alt="Веб-сайт Технокряк" width="370" height="294" />
               <div class="portfolio-card">
                 <h2 class="portfolio-title">Технокряк</h2>
                 <p class="portfolio-subtitle">Веб-сайт</p>
@@ -69,8 +68,8 @@
           </li>
           <li class="item">
             <a class="link" href="" target="_blank" aria-label="Дизайн постера под матч баскетбольных команд">
-              <img class="portfolio-img" src="./images/portfolio/poster.jpg" alt="постер матча баскетбольных команд"
-                width="370" height="294" />
+              <img src="./images/portfolio/poster.jpg" alt="постер матча баскетбольных команд" width="370"
+                height="294" />
               <div class="portfolio-card">
                 <h2 class="portfolio-title">Постер <span lang="en">New Orlean vs Golden Star</span></h2>
                 <p class="portfolio-subtitle">Дизайн</p>
@@ -79,8 +78,8 @@
           </li>
           <li class="item">
             <a class="link" href="" target="_blank" aria-label="разработка приложения для ресторана морской еды">
-              <img class="portfolio-img" src="./images/portfolio/restaurant.jpg" alt="эмблема ресторана морской еды"
-                width="370" height="294" />
+              <img src="./images/portfolio/restaurant.jpg" alt="эмблема ресторана морской еды" width="370"
+                height="294" />
               <div class="portfolio-card">
                 <h2 class="portfolio-title">Ресторан <span lang="en">Seafood</span></h2>
                 <p class="portfolio-subtitle">Приложение</p>
@@ -89,8 +88,7 @@
           </li>
           <li class="item">
             <a class="link" href="" target="_blank" aria-label="разработка маркетинга для проекта прайм">
-              <img class="portfolio-img" src="./images/portfolio/prime.jpg" alt="фото наушников" width="370"
-                height="294" />
+              <img src="./images/portfolio/prime.jpg" alt="фото наушников" width="370" height="294" />
               <div class="portfolio-card">
                 <h2 class="portfolio-title">Проект <span lang="en">Prime</span> </h2>
                 <p class="portfolio-subtitle">Маркетинг</p>
@@ -99,8 +97,7 @@
           </li>
           <li class="item">
             <a class="link" href="" target="_blank" aria-label="разработка приложения для дизайна коробок">
-              <img class="portfolio-img" src="./images/portfolio/boxes.jpg" alt="фото дизайнерский коробок" width="370"
-                height="294" />
+              <img src="./images/portfolio/boxes.jpg" alt="фото дизайнерский коробок" width="370" height="294" />
               <div class="portfolio-card">
                 <h2 class="portfolio-title">Проект <span lang="en">Boxes</span></h2>
                 <p class="portfolio-subtitle">Приложение</p>
@@ -109,8 +106,7 @@
           </li>
           <li class="item">
             <a class="link" href="" target="_blank" aria-label="разработка коропоративного вэб сайта">
-              <img class="portfolio-img" src="./images/portfolio/inspiration.jpg" alt="разработка вэб сайта" width="370"
-                height="294" />
+              <img src="./images/portfolio/inspiration.jpg" alt="разработка вэб сайта" width="370" height="294" />
               <div class="portfolio-card">
                 <h2 class="portfolio-title" lang="en">Inspiration has no Borders</h2>
                 <p class="portfolio-subtitle">Веб-сайт</p>
@@ -119,8 +115,7 @@
           </li>
           <li class="item">
             <a class="link" href="" target="_blank" aria-label="разработка дизайна книги">
-              <img class="portfolio-img" src="./images/portfolio/limited-edition.jpg" alt="дизайн книги" width="370"
-                height="294" />
+              <img src="./images/portfolio/limited-edition.jpg" alt="дизайн книги" width="370" height="294" />
               <div class="portfolio-card">
                 <h2 class="portfolio-title">Издание <span lang="en">Limited Edition</span></h2>
                 <p class="portfolio-subtitle">Дизайн</p>
@@ -129,8 +124,7 @@
           </li>
           <li class="item">
             <a class="link" href="" target="_blank" aria-label="разработка маркетингового проэкта лаб">
-              <img class="portfolio-img" src="./images/portfolio/lab.jpg" alt="дизайн маркетингового проекта"
-                width="370" height="294" />
+              <img src="./images/portfolio/lab.jpg" alt="дизайн маркетингового проекта" width="370" height="294" />
               <div class="portfolio-card">
                 <h2 class="portfolio-title">Проект <span lang="en">LAB</span></h2>
                 <p class="portfolio-subtitle">Маркетинг</p>
@@ -139,8 +133,8 @@
           </li>
           <li class="item">
             <a class="link" href="" target="_blank" aria-label="разработка бизнесс приложения">
-              <img class="portfolio-img" src="./images/portfolio/crowing-business.jpg"
-                alt="разработка приложения для бизнесса" width="370" height="294" />
+              <img src="./images/portfolio/crowing-business.jpg" alt="разработка приложения для бизнесса" width="370"
+                height="294" />
               <div class="portfolio-card">
                 <h2 class="portfolio-title" lang="en">Growing Business</h2>
                 <p class="portfolio-subtitle">Приложение</p>
