--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     <!-- Hero -->
     <section class="hero">
       <div class="container">
-        <h1 class="hero-title">Эффективные решения<br>для вашего бизнеса</h1>
+        <h1 class="hero-title">Эффективные решения для вашего бизнеса</h1>
         <button class="button-hero" type="button">Заказать услугу</button>
       </div>
     </section>
